--- a/src/components/ProjectShowCase/index.css
+++ b/src/components/ProjectShowCase/index.css
@@ -1,14 +1,14 @@
-.app-li{
-    width: 20px;
-    margin-top: 20px;
-    margin-right: 20px;
+.app-li {
+  width: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
-.pic{
-    height: 145px;
-    width: 100%;
-    border-top-left-radius: 60px;
-    border-top-right-radius: 6px;
+.pic {
+  height: 145px;
+  width: 100%;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 6px;
 }
-.para{
-    font-family: "Roboto";
+.para {
+  font-family: 'Roboto';
 }
